--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: burlywood;
+    margin: 0;
+    font-family:  "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 2px;
+}
+
+img {
+    height: 200px;
+}
+
+.site-wrapper {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.cat-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.cat-box {
+  border-radius: 15px;
+  border: 4px solid brown;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.cat-box-caption {
+    display: flex;
+  border-radius: 7px;
+    justify-content: space-between;
+}
+
+button {
+  background-image: -moz-linear-gradient(top,#3d94f6,#1e62d0);
+  font-size: medium;
+  color: blueviolet;
+  font-weight:bolder;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  border-radius: 20%;
+  box-shadow: 1px 1px 20px 0px #000000;
+    background-color: rgba(225, 236, 65, 0.76);
+    color:rgb(117, 23, 23);
+}
+
+.cat-pic {
+  /* border: 2px solid #006100; */
+  border-radius: 11px;
+  border-color: chocolate;
+  border-width: 5px; 
+  float: left;
+  width:  372px;
+  height: 372px;
+  object-fit: cover;
+}
+.header-wrapper {
+  font-size: 30px;
+  padding-left: 20%;
+    background-color: black;
+    color:rosybrown;
+    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+h2 {
+  font-size: x-large;
 }
